<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextCheckAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_check_amount"
        android:maxLines="1"
        android:textSize="28sp"
        android:minWidth="96dp"
        android:textAlignment="center"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:drawableLeft="@drawable/ic_money"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appCompatTipLabel"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/select_a_tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCheckAmount"
        app:layout_constraintVertical_bias="0.0" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTipLabel"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacing="8dp"
            app:singleLine="true"
            app:singleSelection="true" />

    </HorizontalScrollView>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appCompatTextViewTotal"
        style="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextViewTip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Tip: $12.34" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appCompatTextViewTip"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/keyboardLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextViewTotal"
        tools:text="Total: $12.34" />

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/keyboard_background"
        android:keyBackground="@drawable/keyboard_selector"
        android:keyPreviewLayout="@layout/keyboard_preview"
        android:keyTextColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>